2020-07-24  David Turner  <david@freetype.org>

	Add `ft_strdup' function.

	This simplifies compilation on Windows, which doesn't have this
	function.

	* src/common.c: Include `ftstring.h'.
	(ft_strdup): New function.
	* src/common.h: Updated.

	* src/ftcommon.c (FTDemo_Install_Font), src/ftdiff.c
	(render_state_set_files): Use it.

2020-07-24  David Turner  <david@freetype.org>

	* src/*: Replace simple usage of `sprintf' with `snprintf'.

	Recent gcc compiler versions produce warnings for potentially unsafe
	functions like `sprintf'.

2020-07-06  Werner Lemberg  <wl@gnu.org>

	Synchronize with recent FreeType changes.

	* mac/ftoldmac.c, src/ftbench.c, src/ftchkwd.c, src/ftcommon.c:
	Include `compiler-macros.h', which now contains the definition of
	`FT_UNUSED'.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (event_color_change): Cycle color by luminance.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (grX11Surface): Remove redundant fields.
	(gr_win32_surface_{refresh_rectangle,listen_event}): Updated.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Clean up refresh.

	* graph/win32/grwin32.c (gr_win32_surface_refresh_rectangle): Copy
	only requested rectangle, remove dead code.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_device_init): Fix up 03707489a839.

2020-06-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Grayscale fixes.

	* graph/win32/grwin32.c (gr_win32_surface_init): Straighten mapping.
	(gr_win32_surface_refresh_rectangle): Use `memcpy'.

	* graph/grobjs.c (grNewBitmap): Add padding to gray required by GDI.

2020-06-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grobjs.c (grFindColor): Fortify gray luminance.
	* graph/gblblit.c (GRGB*_TO_GRAY8): Synchronize with `grFindColor'.

2020-06-24  Jan Alexander Steffens  <jan.steffens@gmail.com>

	* Makefile (COMPILE): Prioritize FreeType path.
