@@ -1,5 +1,9 @@
 2020-07-24  David Turner  <david@freetype.org>
 
+	* src/ftcommon.c (my_face_requester): Improve code readability.
+
+2020-07-24  David Turner  <david@freetype.org>
+
 	Add `ft_strdup' function.
 
 	This simplifies compilation on Windows, which doesn't have this
